--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "notes app backend",
   "main": "index.mjs",
   "scripts": {
-    "start":"node ./index.mjs"
+    "start":"node index.mjs"
   },
   "keywords": [
     "backend"
